# libstreamripper

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/src/: Makefile  argv.lo  charset.lo  libstreamripper-0.1.pc
Debug/src/.deps/: argv.Plo  charset.Plo
autom4te.cache/: output.1  output.2  requests  traces.1  traces.2
debian/: Makefile  control.in
src/: Makefile.am  Makefile.in  argv.c  cbuf2.c  cbuf2.h  charmaps.h  charset.c  charset.h  confw32.h  debug.c  debug.h  errors.c  external.c  external.h  filelib.c  filelib.h  findsep.c  findsep.h  findsep2.c  http.c  http.h  iconvert.c  ictest.c  libstreamripper-0.1.pc.in  libstreamripper.h  libstreamripper.pc.in  list.h  mchar.c  mchar.h  parse.c  parse.h  prefs.c  relaylib.c  relaylib.h  rip_manager.c  rip_manager.h  ripaac.c  ripogg.c  ripogg.h  ripstream.c  (+10 more)
src/sr/: compat.h
test/: Makefile
