dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(libstreamripper, 0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC





LT_INIT


PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.16.1])

CPPFLAGS="-D__UNIX__"
AC_SUBST(CPPFLAGS)



AC_OUTPUT([
Makefile
src/libstreamripper-0.1.pc
src/Makefile
])
